--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,20 @@ body
 {
 	background-color: #F2F2F2;
 	font-family: 'Roboto';
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
-footer
+.spacer
 {
+	flex: 1;
+}
+
+.footer
+{
+	margin: 5px;
 	font-size: 12px;
 }
 
@@ -18,7 +28,7 @@ footer
 
 .orange
 {
-	background-color: #E77E22;
+	background-color: #FAC75A;
 }
 
 .green
@@ -77,7 +87,7 @@ ul
 {
 	list-style-type: none;
 	margin: 10px 20px 10px 20px;
-	padding: 2px;
+	padding: 0;
 }
 
 ul li
@@ -95,6 +105,7 @@ ul li
 {
 	background: transparent;
 	border: 2px solid transparent;
+	border-radius: 0px;
 	box-sizing: border-box;
 	cursor: pointer;
 	font-size: 18px;
